Set allow-rename off
Remove cruft

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,10 +82,39 @@ set-window-option -g aggressive-resize on
 
 # force a reload of the config file
 unbind-key r
-bind-key r source-file ~/.tmux.conf \; display-message "Reloaded configuration!"
+bind-key r source-file ~/.tmux.conf \; display-message 'Config reloaded'
 
 # window appearance
-set-window-option -g automatic-rename
+set-window-option -g automatic-rename off
+set-window-option -g allow-rename off
 set-window-option -g monitor-activity on
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr reverse
+
+# highlight active pane
+set-option -g pane-active-border-fg blue
+
+# menu bar
+## [from https://github.com/richo/dotfiles/blob/master/tmux.conf]
+set-option -g status-utf8 on
+set-option -g status-justify left
+set-option -g status-bg default
+set-option -g status-fg white
+set-option -g message-attr none
+set-option -g message-bg white
+set-option -g message-fg black
+set-window-option -g window-status-bell-bg cyan
+set-window-option -g window-status-bell-attr bright
+set-window-option -g window-status-activity-bg red
+set-window-option -g window-status-activity-attr bright
+set-option -g status-interval 5
+set-option -g status-left-length 30
+set-option -g status-left  '#[fg=cyan][#S#[fg=black,bold]#P#[default]#[fg=cyan]]#[default]'
+set-option -g status-right "#[fg=blue]#(acpi) #[default]#[fg=$TMUX_SHELL_COLOR]#h#[default] #{?client_prefix,#[fg=red],#[fg=cyan]}%d %B %Y#[default] %R"
+set-window-option -g window-status-current-format "[#[fg=white]#I:#W#F#[fg=red]]"
+set-option -g visual-activity on
+set-window-option -g monitor-activity off
+set-window-option -g window-status-current-fg red
+set-window-option -g window-status-current-attr bright
+
+# vim: ft=tmux :
