--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,8 +28,9 @@ bind-key ` send-prefix
 set-option -sg escape-time 0
 
 # use mnemonic shortcuts for screen splits ('\' shares key with '|')
-bind-key \ split-window -h
-bind-key - split-window -v
+# - open new pane in same directory
+bind-key \ split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 
 # open four panes (designed for empty window)
 unbind-key O
