.tmux.conf: consolidate mouse commands

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,9 +74,7 @@ unbind-key ^A
 bind-key ^A select-pane -t :.+
 
 # mouse use
-set-option -g mode-mouse on
-set-window-option -g mouse-select-window on
-set-window-option -g mouse-select-pane on
+set-option -g mouse on
 
 # aggressively resize windows
 set-window-option -g aggressive-resize on
