--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,3 @@
-# plugins
-set -g @tpm_plugins '      \
-    tmux-plugins/tpm       \
-    tmux-plugins/tmix-yank \
-'
-
 # default shell
 set-option -g default-shell /bin/zsh
 
@@ -93,6 +87,10 @@ set-window-option -g window-status-current-attr reverse
 # highlight active pane
 set-option -g pane-active-border-fg blue
 
+# configure tmux-resurrect
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+
 # menu bar
 ## [from https://github.com/richo/dotfiles/blob/master/tmux.conf]
 set-option -g status-utf8 on
@@ -115,5 +113,15 @@ set-option -g visual-activity on
 set-window-option -g monitor-activity off
 set-window-option -g window-status-current-fg red
 set-window-option -g window-status-current-attr bright
+
+# plugins
+# - after adding a new plugin below:
+#   . save config file and return tmux shell prompt
+#   . reload config file (currently 'prefix + r')
+#   . install plugins (default is 'prefix + I')
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
 
 # vim: ft=tmux :
